OSNG-10 - fixed sonar violation