@@ -40,7 +40,7 @@ public class DataBaseSchemeVersionValidator {
     @PostConstruct
     public void checkVersion() {
         DBVersion version = em.find(DBVersion.class, DBVersion.DB_VERSION);
-        if (version == null || !new Double(version.version).equals(DBVersion.DB_VERSION)) {
+        if (version == null || !Double.valueOf(version.version).equals(DBVersion.DB_VERSION)) {
             throw new IllegalStateException("Database Scheme " + DBVersion.DB_VERSION + " not found. " +
                     "The reason may be that the wrong database scheme is enrolled, please contact a System-Administrator");
         }
